k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gohome
  labels:
    app: gohome
spec:
  selector:
    app: gohome
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: metrics
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
